RESOLVED FIXED Bug 86830
ComposedShadowTreeWalker traverses nodes wrongly if it encounters inactive InsertionPoint.
https://bugs.webkit.org/show_bug.cgi?id=86830
Summary ComposedShadowTreeWalker traverses nodes wrongly if it encounters inactive In...
Hayato Ito
Reported 2012-05-18 02:17:52 PDT
ComposedShadowTreeWalker traverse nodes wrongly if it encounter inactive InsertionPoints. We should traverse an inactive InsertionPoint as if it was normal node.
Attachments
fix isActive (6.98 KB, patch)
2012-05-22 05:19 PDT, Hayato Ito
no flags
Hayato Ito
Comment 1 2012-05-22 05:19:00 PDT
Created attachment 143282 [details] fix isActive
WebKit Review Bot
Comment 2 2012-05-22 20:35:56 PDT
Comment on attachment 143282 [details] fix isActive Clearing flags on attachment: 143282 Committed r118111: <http://trac.webkit.org/changeset/118111>
WebKit Review Bot
Comment 3 2012-05-22 20:36:01 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.