Make ComposedShadowTreeWalker traverse inactive insertion points correctly. https://bugs.webkit.org/show_bug.cgi?id=86830

Reviewed by Dimitri Glazkov.

Source/WebCore:

Fixed InsertionPoint::isActive() issue, which may return true
wrongly even if the insertion point is not in Shadow DOM subtree.
Now ComposedShadowTreeWalker can traverse inactive insertion
points correctly using InsertionPoint::isActive().

Test: fast/dom/shadow/composed-shadow-tree-walker.html

* dom/ComposedShadowTreeWalker.cpp:
(WebCore::ComposedShadowTreeWalker::traverseNode):
(WebCore::ComposedShadowTreeWalker::escapeFallbackContentElement):
(WebCore::ComposedShadowTreeWalker::traverseNodeEscapingFallbackContents):
* html/shadow/InsertionPoint.cpp:
(WebCore::InsertionPoint::isActive):
* html/shadow/InsertionPoint.h:
(WebCore::isActiveInsertionPoint):
(WebCore):

LayoutTests:

* fast/dom/shadow/composed-shadow-tree-walker-expected.txt:
* fast/dom/shadow/composed-shadow-tree-walker.html:


Canonical link: https://commits.webkit.org/104927@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@118111 268f45cc-cd09-0410-ab3c-d52691b4dbfc